[gd_scene load_steps=23 format=3 uid="uid://230e3yaudlv0"]

[ext_resource type="Script" path="res://scripts/Enemies/enemy.gd" id="1_j1sej"]
[ext_resource type="Texture2D" uid="uid://d3jyy12ut8pdd" path="res://assets/Enemies/Chick_enemy.png" id="1_tpm6m"]
[ext_resource type="AudioStream" uid="uid://bptwyx2itu2yr" path="res://assets/Sound FX/chick_enemy.wav" id="3_f7fn1"]
[ext_resource type="Script" path="res://scripts/Enemies/state_machine.gd" id="4_reomk"]
[ext_resource type="Script" path="res://scripts/Enemies/chick_walk.gd" id="5_0juso"]
[ext_resource type="Script" path="res://scripts/Enemies/chick_attack.gd" id="6_qooti"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8oben"]
size = Vector2(266.667, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocjur"]
size = Vector2(31, 36.6667)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu482"]
atlas = ExtResource("1_tpm6m")
region = Rect2(150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep5ev"]
atlas = ExtResource("1_tpm6m")
region = Rect2(200, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8trj"]
atlas = ExtResource("1_tpm6m")
region = Rect2(250, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bigyq"]
atlas = ExtResource("1_tpm6m")
region = Rect2(300, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_gifds"]
atlas = ExtResource("1_tpm6m")
region = Rect2(350, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr24v"]
atlas = ExtResource("1_tpm6m")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7mpy"]
atlas = ExtResource("1_tpm6m")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_55xhk"]
atlas = ExtResource("1_tpm6m")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_38hxo"]
atlas = ExtResource("1_tpm6m")
region = Rect2(100, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_mkdxf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu482")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep5ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8trj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bigyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gifds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr24v")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7mpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55xhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38hxo")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0rgk"]
size = Vector2(28, 39.3333)

[sub_resource type="Animation" id="Animation_fnpy2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_g8oxo"]
resource_name = "dead"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.966667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.3, 0.366667, 0.433333, 0.5, 0.566667, 0.633333, 0.7, 0.766667, 0.833333, 0.866667, 0.933333, 1, 1.06667, 1.13333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 3.14159, 4.71239, 6.28319, -6.28319, -4.71239, -3.14159, -1.5708, 0.0, 1.5708, 3.14159, 4.71239, 6.28319, -6.28319, -4.71239, -3.14159, -1.5708, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b22xc"]
_data = {
"RESET": SubResource("Animation_fnpy2"),
"dead": SubResource("Animation_g8oxo")
}

[node name="EggChickEnemy" type="CharacterBody2D" node_paths=PackedStringArray("head_detection", "body_detection") groups=["Enemy"]]
scale = Vector2(1.5, 1.5)
collision_mask = 2
script = ExtResource("1_j1sej")
head_detection = NodePath("HeadDetection")
body_detection = NodePath("BodyDetection")

[node name="HeadDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadDetection"]
position = Vector2(0, -21.6667)
scale = Vector2(0.12, 1)
shape = SubResource("RectangleShape2D_8oben")

[node name="BodyDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyDetection"]
position = Vector2(0, -0.333334)
shape = SubResource("RectangleShape2D_ocjur")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mkdxf")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.333333)
shape = SubResource("RectangleShape2D_y0rgk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b22xc")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_f7fn1")

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_reomk")
initial_state = NodePath("Walk")

[node name="Walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_0juso")
enemy = NodePath("../..")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_qooti")
enemy = NodePath("../..")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 17.5)
target_position = Vector2(0, 11)

[connection signal="body_entered" from="HeadDetection" to="." method="_on_head_touched"]
[connection signal="body_entered" from="BodyDetection" to="." method="_on_body_entered"]
